[build-system]
    requires = ["setuptools >= 61.0"]
    build-backend = "setuptools.build_meta"


# [tool.setuptools]
#     packages = ["libdmet", "libdmet_solid"]
[tool.setuptools.packages]
    find = {namespaces = false, where = ["libdmet", "libdmet_solid"]}



[project]
    name = "libdmet"
    version = "0.5"
    dependencies = ["pyscf>=2.0", "numpy", "scipy", "h5py"]
    requires-python = ">= 3.1"
    authors = [
        {name = "Zhihao Cui", email = "zhcui0408@gmail.com"},
    ]
    maintainers = [
        {name = "Zhihao Cui", email = "zhcui0408@gmail.com"},
    ]
    description = "A library of density matrix embedding theory (DMET) for lattice models and realistic solids."
    readme = "README.md"
    classifiers = [
        # How mature is this project? Common values are
        #   3 - Alpha
        #   4 - Beta
        #   5 - Production/Stable
        "Development Status :: 4 - Beta",

        "Intended Audience :: Developers",
        "Topic :: Software Development :: Build Tools",

        "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",

        "Programming Language :: Python :: 3",
    ]


[project.urls]
    Repository = "https://github.com/gkclab/libdmet_preview"
    "Bug Tracker" = "https://github.com/gkclab/libdmet_preview/issues"
